# a2a-poc

./: .cursorrules  .gitignore  DEPLOYMENT.md  MIGRATION_NOTES.md  PHASE2_COMPLETION.md  PHASE3_COMPLETION.md  PROJECT_ROADMAP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START.md  env.example  package.json  pnpm-lock.yaml  turbo.json
apps/backend/: README.md  START_BACKEND.md  main.py  package.json  pyproject.toml  requirements.txt
apps/backend/app/: config.py  database.py  main.py
apps/backend/app/api/v1/: agents.py  analytics.py  api_keys.py  groups.py  ipfs.py  monitoring.py  payments.py  prompts.py  reputation.py  router.py  tasks.py  validation.py
apps/backend/app/api/v1/endpoints/: agents.py  groups.py  tasks.py
apps/backend/app/core/: config.py  database.py
apps/backend/app/middleware/: __init__.py  rate_limit.py
apps/backend/app/models/: __init__.py  agent.py  group.py
apps/backend/app/schemas/: agent.py  group.py  payment.py  prompt_template.py
apps/backend/app/services/: a2a_handler.py  agent_manager.py  agent_service.py  analytics_service.py  api_key_service.py  blockchain.py  error_tracking.py  group_service.py  ipfs_service.py  payment_service.py  prompt_service.py  task_manager.py
apps/contracts/: README.md  hardhat.config.ts  package.json  tsconfig.json
apps/frontend/: README.md  index.html  package.json
examples/: QUICKSTART.md  README.md  check_env.py  requirements.txt  run_demo.sh  test_onchain_feedback.py
examples/agents/: __init__.py  base_agent.py  pm_agent.py
examples/scenarios/: __init__.py  demo_todo_app.py  (+1 more)
(+46 files in other folders)
